added comments for the calculator comp

--- a/src/app/calc/calc.component.html
+++ b/src/app/calc/calc.component.html
@@ -4,7 +4,7 @@
 
 <div style="text-align: center;">
     <h1>{{title}}</h1>
-    <label style="height: 40.5;">{{result}}</label>
+    <label class = "w3-input w3-border">{{result}}</label>
     <label class = "w3-input w3-border">Total: {{total}}</label>
     <button (click) = "clear()">c</button>
     <button (disabled) = "isDisabled">&nbsp;&nbsp;</button>
